test_data/invalid/2.2_floating_assembly.ldr
0 Floating assembly
1 4 0 -100 0 1 0 0 0 1 0 0 0 1 3001.dat
1 15 0 -124 0 1 0 0 0 1 0 0 0 1 3001.dat